Uplift all code base to java21
Issue-ID: POLICY-5466
Change-Id: I58095be5047088a1e1d41c5faf0312054d9f6dfd
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>