@@ -36,7 +36,6 @@
     <name>Policy Integration POM</name>
     <description>Policy Integration POM</description>
     <properties>
-        <java.version>17</java.version>
         <!-- Note Well: For RELEASE/SNAPSHOT always set to the project version -->
         <version.parent.resources>5.2.3-SNAPSHOT</version.parent.resources>
         <version.parent.checkstyle>[4.1.2,)</version.parent.checkstyle>
@@ -52,7 +51,7 @@
         <docker.push.registry>nexus3.onap.org:10003</docker.push.registry>
         <!-- Dependency Versions -->
         <version.beanutils>1.11.0</version.beanutils>
-        <version.bytebuddy>1.14.13</version.bytebuddy>
+        <version.bytebuddy>1.17.8</version.bytebuddy>
         <version.ccsdk>1.7.1</version.ccsdk>
         <version.cucumber>7.15.0</version.cucumber>
         <version.docker-java>3.3.2</version.docker-java>
@@ -64,7 +63,7 @@
         <version.httpcore>5.3.4</version.httpcore>
         <version.io.prometheus>1.3.6</version.io.prometheus>
         <version.jackson>2.18.3</version.jackson>
-        <version.jacoco>0.8.11</version.jacoco>
+        <version.jacoco>0.8.13</version.jacoco>
         <version.jaxb>4.0.5</version.jaxb>
         <version.jersey>3.1.10</version.jersey>
         <version.jetty>12.0.22</version.jetty>
@@ -72,15 +71,17 @@
         <version.json-path>2.9.0</version.json-path>
         <version.json-schema-friend>0.12.4</version.json-schema-friend>
         <version.json-schema-validator>1.5.6</version.json-schema-validator>
-        <version.jupiter>5.12.2</version.jupiter>
+        <version.jupiter>6.0.0</version.jupiter>
+        <version.kafka>3.9.1</version.kafka>
         <version.kafka>4.1.0</version.kafka>
         <version.kotlin>2.1.20</version.kotlin>
         <version.log4j>2.24.3</version.log4j>
         <version.logback>1.5.18</version.logback>
+        <version.lombok>1.18.42</version.lombok>
         <version.maven-checkstyle-plugin>3.3.1</version.maven-checkstyle-plugin>
         <version.maven-remote-resources-plugin>3.1.0</version.maven-remote-resources-plugin>
         <version.micrometer>1.14.5</version.micrometer>
-        <version.mockito>5.18.0</version.mockito>
+        <version.mockito>5.20.0</version.mockito>
         <version.mockserver>5.15.0</version.mockserver>
         <version.nsa-cambria>1.2.1-oss</version.nsa-cambria>
         <version.nsa-sa-client>1.3.0-oss</version.nsa-sa-client>
@@ -101,6 +102,7 @@
             --add-opens java.base/java.util=ALL-UNNAMED
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.sql/java.sql=ALL-UNNAMED
+            -XX:+EnableDynamicAgentLoading
         </surefireArgLine>
     </properties>
     <distributionManagement>
@@ -638,7 +640,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.38</version>
+                <version>${version.lombok}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -1111,6 +1113,7 @@
                     <plugin>
                         <groupId>org.owasp</groupId>
                         <artifactId>dependency-check-maven</artifactId>
+                        <version>12.1.7</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -1434,6 +1437,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${version.lombok}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
         </plugins>
     </build>
